--- a/english/word/low-frequency/085-090.md
+++ b/english/word/low-frequency/085-090.md
@@ -92,7 +92,7 @@
 - sake [seɪk]
     - n. 理由
     - for the sake of sth./sb 为了...的利益/出于对...的考虑/为了...本身
-- systemic
+- systemic [sɪˈstemɪk]
     - adj. 涉及全系统的
     - systematicness [sɪstə'mætɪknes] n. 系统性
 - discriminate [dɪˈskrɪmɪneɪt]
@@ -139,6 +139,7 @@
     - But take a longer view and there is a surprising amount that we can say with considerable **assurance**.
       但是如果从更长远的角度来看，我们其实可以相当有把握地说出不少结论
         - take a longer/long-term/broader view 从更长远；更宏观的角度看
+        - there is a surprising amount 有相当多/出乎意料多的...
         - with considerable assurance 相当有把握地/颇为确定地
     - There is anything but an **assurance** of success, I have to be very clear about that.
 - inexperienced
