--- a/english/word/low-frequency/097-102.md
+++ b/english/word/low-frequency/097-102.md
@@ -28,34 +28,34 @@
         - **Innovation** is the ability to see change as an opportunity—not a threat.
 - dispatch
     - vt. 派遣
-- contextual
+- contextual [kənˈtɛkstʃuəl]
     - adj. 上下文的
     - contextualize vt. 将...置于背景中考虑
     - context
         - n. 背景；语境
         - Meaning is **context** bound, but **context** is boundless.
-- restoration
+- restoration [ˌrestəˈreɪʃn]
     - n. 修复
-- murmur
+- murmur [ˈmɜːrmər]
     - v. 小声说
-- puff
+- puff [pʌf]
     - v. 气喘吁吁
-    - There is as much joy over a **puffed-out** first-timer being *clapped(v. 鼓掌)* over the
-      line as there is about top talent shining.
-- purchaser
+    - There is as much joy over a **puffed-out** first-timer being *clapped(v. 鼓掌)* over the line as there is about
+      top talent shining. 人们为一个气喘吁吁的首次参赛者在掌声中冲过终点线而感到的喜悦，并不亚于对顶尖选手大放异彩的喝彩
+- purchaser [ˈpɜːrtʃəsər]
     - n. 购买人
 
 ## 098
 
-- cleanser
+- cleanser [ˈklɛnzɚ]
     - n. 清洁剂；洁面乳
-- shaky
+- shaky [ˈʃeki]
     - adj. 不可靠的
 - unchangeable
     - adj. 不可改变的
-- exemplify
+- exemplify [ɪɡˈzemplɪfaɪ]
     - vt. 举例说明
-- diligence
+- diligence [ˈdɪlɪdʒəns]
     - n. 勤奋
     - diligent [ˈdɪlɪdʒənt]
         - adj. 勤奋的，勤勉的
@@ -63,46 +63,48 @@
 - abuse
     - vt. 滥用
     - n. 滥用
-- poisonous
+- poisonous [ˈpɔɪzənəs]
     - adj. 有毒的
-- induce
+- induce [ɪnˈduːs]
     - vt. 引起
     - == cause v. 导致
     - Taking a brisk walk can often **induce** a feeling of well-being.
+        - brisk [brɪsk] adj. 轻快的;（生意）兴隆的;（天气）凉爽的; 精干利落的
     - inducement n. 引诱物
 - faulty
     - adj. （思维方法）错误的
+    - A **Faulty** Approach to Homework. 错误的家庭作业方法
     - fault
         - vt. 挑剔，指责
         - n. 缺点；错误；故障
-    - A **Faulty** Approach to Homework. 错误的家庭作业方法
 
 ## 099
 
-- ceremonial
+- ceremonial [ˌserɪˈmoʊniəl]
     - adj. 仪式的
-- panorama
+- panorama [ˌpænəˈræmə]
     - n. 全貌
-    - see the big picture 看见全貌
-        - == see the panorama
+    - see the panorama 看见全貌
+        - == see the big picture
 - misadjusted
     - adj. 失调的
 - standstill
     - n. 停滞
     - at a standstill 在停滞中
-- reproducible
+- reproducible [ˌriprə'djusəbl]
     - adj. 可复制的
     - reproducibility n. 再现性
-- methodically
+- methodically [mɪˈθɑdɪkəlɪ]
     - adv. 有方法地
-    - methodology n. 方法论
+    - methodology [ˌmeθəˈdɑːlədʒi] n. 方法论
     - method n. 方法
 - prolong
     - vt. 延长
-- grimly 😔
+- grimly [ˈɡrɪmlɪ] 😔
     - adv. 可怕的
-    - It has become a **grimly** reliable <ins>annual ritual(仪式，惯例)</ins>:every January the cost of travelling by
+    - It has become a **grimly** reliable <ins>annual ritual(仪式，惯例)</ins>: every January the cost of travelling by
       train rises...
+        - reliable [rɪˈlaɪəbl] adj. 可靠的
 
 ## 100
 
@@ -113,22 +115,22 @@
         - glamorous [ˈɡlæmərəs] adj. 有魅力的
 - inject
     - vt. 注射（药物）
-- competitiveness
-    - adj. 无竞争力的
+- competitiveness [kəm'petətɪvnəs]
+    - n. 竞争力
     - uncompetitive n. 无竞争力的
 - constructive
     - adj. 建设性的
-- hamper
+- hamper [ˈhæmpər]
     - vt. 阻碍
-    - hinder [ˈhɪndər] vt. 阻碍
-- preservation
+    - == hinder [ˈhɪndər] vt. 阻碍
+- preservation [ˌprezərˈveɪʃn]
     - n. 保存
     - preserve [prɪˈzɜːrv] vt. 维护；保护
 - reportedly
     - adv. 据报道
-- magnetic
+- magnetic [mæɡˈnetɪk]
     - adj. 地磁的
-- preface
+- preface [ˈprefəs]
     - n. 序言
 
 ## 101
@@ -136,47 +138,47 @@
 - freethinking
     - adj. 思想自由的
     - carefree adj. 无忧无虑的
-- engrave
+- engrave [ɪnˈɡreɪv]
     - vt. 雕刻
-- oceanic
+- oceanic [ˌoʊʃiˈænɪk]
     - adj. 海洋的
     - ocean [ˈoʊʃn] n. 海洋；(pl.)大量，许多(oceans of)
 - shorten
     - v. （使）变短
-- hospitality
+- hospitality [ˌhɑːspɪˈtæləti]
     - n. 好客
-- nitrogen
+- nitrogen [ˈnaɪtrədʒən]
     - n. 氮
 - abundantly
     - adv. 十分地；大量地
 - psychologically
     - adv. 心理上地
-- envisage
+- envisage [ɪnˈvɪzɪdʒ]
     - vt. 展望
-    - == imagine == envision vt. 设想
-- fantasise
+    - == imagine [ɪˈmædʒɪn] vt. 想象；猜想 == envision vt. 设想
+- fantasise ['fæntəˌsaɪz]
     - v. 想象
     - fantasy [ˈfæntəsi] n. 幻想；虚幻的
 
 ## 102
 
-- steer
+- steer [stɪr]
     - vt. 引导
-- fruitless
+- fruitless [ˈfrutlɪs]
     - adj. 无成效的
     - fruitful adj. 富有成效的
 - worldly
     - adj. 世间的
 - incompatible
     - adj. 合不来的
-- computational
+- computational [ˌkɑːmpjuˈteɪʃənl]
     - adj. 与计算机有关的
     - computing n. 计算
 - problematic
     - adj. 有很多问题的
-- fixation
-    - n. 注视
-- eclipse
+- fixation [fɪkˈseʃən]
+    - n. 注视；痴迷
+- eclipse [ɪˈklɪps]
     - vt. 使失色
     - Her work was in **eclipse** for most of the 20th century.
     - With the Church's teachings and ways of thinking being **eclipsed** by the Renaissance...
