--- a/english/word/low-frequency/103-108.md
+++ b/english/word/low-frequency/103-108.md
@@ -27,7 +27,9 @@
     - n. 暂停
 - admirable
     - adj. 令人钦佩的
-    - admiration n. 钦佩
+    - admiration
+        - n. 钦佩
+        - Ignorance is the mother of **admiration**.
 - outsize
     - adj. 较大的
     - oversize adj. 特别大的
@@ -37,25 +39,29 @@
     - adj. 挥霍的
 - rigorous
     - adj. 严格的
-    - strict
+    - strict [strɪkt] adj. 严格的
 
 ## 104
 
 - contrive
     - vt. 谋划
-    - I decided to contrive a meeting between the two of them.
     - plan
+        - v. 计划
+        - n. 计划
+    - contrive to do sth.
+        - == plan to do sth.
+    - I decided to **contrive** a meeting between the two of them.
 - fabulous
     - adj. 极好的
 - cable
     - n. 有线电视
 - bruising
     - adj. 艰难的
-    - After a bruising encounter with Congress,America's Financial Accounting Standards Board rushed through rule
-      changes.
+    - After a **bruising** encounter with Congress, America's Financial Accounting Standards Board rushed through rule
+      changes. 在于过会激烈交锋之后，美国财务会计准则委员会（FASB)匆匆通过了规则变更
 - understandably
     - adv. 可以理解地
-- absued
+- absurd
     - adj. 荒唐的
 - numerical
     - adj. 数字的
@@ -63,27 +69,32 @@
     - adv. 非常地
 - inhale
     - v. 吸入（空气，烟雾或气体等）
+    - exhale
+        - vt. 发散出; 放出，放射; 使蒸发
+        - vi. 呼气; 放出; 发散
 - illegally
     - adv. 非法地
 
 ## 105
 
 - preclude 😔
-    - vt.阻止
+    - vt. 阻止
     - preclude sb from doing sth.
-    - include 包含
-    - exclude 排外
+    - include v. 包括
+    - exclude [ɪkˈskluːd] vt. 把...排斥在外；不包括；排除（...的可能性）
 - ethically
     - adv. 伦理地，道德地
     - ethical crisis 伦理危机
 - suburban [səˈbɜːrbən]
     - adj. 郊区的
-    - urban 城市的
+    - urban adj. 城市的
+    - rural [ˈrʊrəl] adj. 农村的
 - conform
     - vi. 遵守
     - conform to/with 遵守
-    - conformity n. 随大流；遵守
-        - in conformity with 相一致
+    - conformity
+        - n. 遵守；随大流
+        - in conformity with 符合/遵照/与...一致
 - notify
     - vt. 通知
 - aggregation
@@ -93,12 +104,14 @@
     - v. 调解
 - stance
     - n. 立场
-    - take ... stance
-    - What is the newspaper's stance on the war?
+    - take a stance (on/toward sth.) 对...采取立场/表明态度
+    - What is the newspaper's **stance** on the war?
 - unbearable
     - adj. 无法忍受的
-    - bear v. 承受，忍受
-    - The waiting became almost unbearable.
+    - bear
+        - v. 忍受，承担
+        - n. 熊；体型笨重的人；（股票）卖空者
+    - The waiting became almost **unbearable**.
 
 ## 106
 
@@ -106,11 +119,12 @@
     - n. 实践，实施
     - implement v. 实施
 - punch
-    - vt. 打击； n. 重拳击打
+    - vt. 打击
+    - n. 重拳击打
 - unwittingly
-    - adv.不知情地
+    - adv. 不知情地
 - gateway
-    - n. 门
+    - n. 门；方法；通道；途径
 - brutal
     - adj. 残酷的
 - obstruct
@@ -118,46 +132,58 @@
     - obstruct efforts to 阻碍做...
 - unanimous
     - adj. 一致同意的
-    - in a rare unanimous ruling 在罕见的一致的裁决中
-        - verdict == ruling 裁决
-        - In a rare unanimous ruling，the US Supreme Court has **overturned** the <ins>corruption conviction (
-          贪污定罪)</ins> of <ins>former (前者)</ins> Virginia governor，Robert McDonnell.
-    - anonymous(匿名) vs unanimous
-        - The vote was__
-        - You can remain__if you wish.
-- **accessibility**
+    - In a rare **unanimous** ruling，the US Supreme Court has **overturned** the corruption conviction of former
+      Virginia governor，Robert McDonnell.
+        - in a rare unanimous ruling 在罕见的一致的裁决中
+        - verdict [ˈvɜːrdɪkt]
+            - n. 裁决
+            - == ruling == decision
+        - former
+            - adj. 以前的；（两者中）前者的；前任的
+            - pron. （两者中的）前者
+    - anonymous [əˈnɑːnɪməs] adj. 匿名的
+    - The vote was ?anonymous/?unanimous
+    - You can remain ?anonymous/?unanimous if you wish.
+- accessibility
     - n. 可获得性
-    - access
+    - access [ˈækses]
+        - v. 访问，存取（计算机信息）; 到达，进入，使用
+        - n. 入口，通道; （使用或见到的）机会/权利
 - propagate
     - v. 传播
-        - spread
+    - spread [spred]
+        - v. 传播；使分布
+        - n. 传播
     - propagation n. 传播
 
 ## 107
 
 - forgery
     - n. 伪造品
-    - fake
+    - fake adj. 假的
 - controversialist
     - n. 好争论者
 - hyperactivity
     - n. 极度活跃
 - prosperous
     - adj. 繁荣的
-    - **prosperity**n. 繁荣
+    - prosperity n. 繁荣，兴旺
 - plaster
     - n. 熟石灰
-- **orderly**
+- orderly
     - adj. 整洁的
     - == tidy
+        - adj. 整洁的，有条理的; 爱整洁的; 一大笔（钱）的
+        - v. 收拾，整理
 - indication
     - n. 迹象
-- **impairment** 😔
-    - n. (身体或智力方面的)缺陷，障碍
+- impairment 😔
+    - n. （身体或智力方面的）缺陷，障碍
 - unauthorized
     - adj. 未经许可（或批准的）
 - irritability
     - n. 易怒
+    - irritate [ˈɪrɪteɪt] v. 激怒，惹怒
 
 ## 108
 
@@ -165,31 +191,38 @@
     - vt. 回收；要回；开垦
 - sensor
     - n. （探测光，热，压力等的）传感器，探测设备
-    - sense
+    - sense n. 理智
 - proverb
     - n. 谚语
     - quote a proverb 引用一句谚语
 - pronouncement
     - n. 声明
-- **remedy**
+- remedy
     - vt. 改进；改正
-    - need to be remedied
+    - need to be remedied 需要被纠正/需要得到补救/需要解决
 - dismissal
     - n. 解雇
-    - pink slip 解雇通知单
-    - Now a pink slip,a bad diagnosis,or a disappearing spouse can <ins>reduce (沦落到)</ins> a family from solidly
-      middle class to newly poor in a few months.
+    - Now a pink slip, a bad diagnosis, or a disappearing spouse can **reduce** a family from solidly middle class to
+      newly poor in a few months.
+        - pink slip 解雇通知单
+        - reduce [rɪˈduːs] vt. 减少 -> 沦落到（ 使沦为（不好境地）)
 - stagnation
     - n. 停滞
-    - recession/depression/slow down
+    - economic stagnation/recession/depression/slow down
 - deepen
     - v. （使）变深
 - abruptly
     - adv. 突然地
 - imprison
-    - vt. 监禁
+    - vt. 监禁；禁锢
 
 ## Words
+
+- edgy [ˈɛdʒi]
+    - adj. 锋利的，泼辣的，尖锐的; 神经紧张的，易激动的，急躁的; （画）轮廓过于分明的
+- cozy [ˈkoʊzi]
+    - adj. （感到）温暖舒适的; 愉快的，亲切的; 轻易得到的
+    - n. （茶壶）保暖罩
 
 ## 词组
 
