--- a/math/advanced-mathematics/foundations/inequality.tex
+++ b/math/advanced-mathematics/foundations/inequality.tex
@@ -127,7 +127,7 @@
         \item 当 $0 < x < \displaystyle\frac{\pi}{4}$时，$x < \tan x < \displaystyle\frac{4}{\pi}x$
         \item $\arctan x \leq x \leq \arcsin x, \quad 0 \leq x \leq 1$
         \item $e^x \geq x + 1, \quad x\text{为任意值}$
-        \item $x - 1 \geq \ln x, \quad x > 0$
+        \item $x > 0$时，$\color{red}{x - 1 \geq \ln x}\;$或$\;x \geq \ln x + 1$
         \item
         \[
             \frac{1}{1+x}
@@ -157,6 +157,7 @@
     \subsection{条件转换思路}
 
     \begin{enumerate}
+        \item $x_n>0,\ a>0, \displaystyle\frac{1}{2}(x_n + \displaystyle\frac{a}{x_n}) \Rightarrow \displaystyle\frac{1}{2}(x_n + \displaystyle\frac{a}{x_n}) \geq \sqrt {a}$
 
     \end{enumerate}
 
