feat: add Advanced Mathmatics notes

--- a/math/advanced-mathematics/limits_and_continuity_of_functions/concept_and_properties_of_function_limits.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/concept_and_properties_of_function_limits.tex
@@ -240,7 +240,7 @@
         \begin{itemize}
             \item 若$f(x)$在$(a, b)$内是连续函数，且$\lim\limits_{x\to a^+}f(x)$, $\lim\limits_{x\to b^-}f(x)$都存在，则$f(x)$在$(a, b)$内必定有界
         \end{itemize}
-        \item $\color{red}{\bigstar}$局部保号性:
+        \item $\color{red}{\bigstar}\color{red}{\bigstar}$局部保号性:
         \begin{itemize}
             \item 脱帽严格不等
             \begin{circlenum}
