--- a/english/word/low-frequency/091-096.md
+++ b/english/word/low-frequency/091-096.md
@@ -32,8 +32,9 @@
     - carbon di**oxide** 二氧化碳
 - vulnerability [ˌvʌlnərə'bɪləti]
     - n. 易损性
-    - A baby is <ins>the embodiment of(...的化身)</ins> **vulnerability**.
+    - A baby is the embodiment of **vulnerability**.
         - embodiment n. 集中体现
+        - the embodiment of ...的化身
     - vulnerable [ˈvʌlnərəbl] adj. 脆弱的；易受伤害的
 - unnamed
     - adj. 不知其名的
@@ -128,7 +129,7 @@
     - n. 组装；议会；集会
     - assemble v. 集合，集结
 - entitlement [ɛnˈtaɪtlmənt]
-    - n. 权力
+    - n. 权利；授权
 - reawaken [ˌriːəˈweɪkən]
     - vt. 重新唤起
 - underestimation [ˌʌndərˌestɪ'meɪʃn]
