--- a/english/word/low-frequency/103-108.md
+++ b/english/word/low-frequency/103-108.md
@@ -21,15 +21,16 @@
 
 - misapply
     - vt. 误用
-- insincere
+- insincere [ˌɪnsɪnˈsɪr]
     - adj. 不诚恳的
 - suspension
     - n. 暂停
-- admirable
+- admirable [ˈædmərəbl]
     - adj. 令人钦佩的
-    - admiration
+    - admiration [ˌædməˈreɪʃn]
         - n. 钦佩
         - Ignorance is the mother of **admiration**.
+            - ignorance [ˈɪɡnərəns] n. 无知，愚昧
 - outsize
     - adj. 较大的
     - oversize adj. 特别大的
@@ -37,52 +38,55 @@
     - n. 编程人员
 - wasteful
     - adj. 挥霍的
-- rigorous
+- rigorous [ˈrɪɡərəs]
     - adj. 严格的
     - strict [strɪkt] adj. 严格的
 
 ## 104
 
-- contrive
+- contrive [kənˈtraɪv]
     - vt. 谋划
-    - plan
+    - == plan
         - v. 计划
         - n. 计划
-    - contrive to do sth.
-        - == plan to do sth.
+    - 词组
+        - contrive to do sth.
+            - == plan to do sth.
     - I decided to **contrive** a meeting between the two of them.
-- fabulous
+- fabulous [ˈfæbjələs]
     - adj. 极好的
 - cable
     - n. 有线电视
-- bruising
+- bruising [ˈbruːzɪŋ]
     - adj. 艰难的
     - After a **bruising** encounter with Congress, America's Financial Accounting Standards Board rushed through rule
       changes. 在于过会激烈交锋之后，美国财务会计准则委员会（FASB)匆匆通过了规则变更
+        - encounter vt. 遭遇（尤指令人不快或困难的事）
+        - rushed [rʌʃt] adj. 匆忙的，贸然的
 - understandably
     - adv. 可以理解地
-- absurd
+- absurd [əbˈsɜːrd]
     - adj. 荒唐的
-- numerical
+- numerical [nuːˈmerɪkl]
     - adj. 数字的
-- deliciously
+- deliciously [dɪ'lɪʃəslɪ]
     - adv. 非常地
-- inhale
+- inhale [ɪnˈheɪl]
     - v. 吸入（空气，烟雾或气体等）
     - exhale
         - vt. 发散出; 放出，放射; 使蒸发
         - vi. 呼气; 放出; 发散
-- illegally
+- illegally [ɪˈliɡəlɪ]
     - adv. 非法地
 
 ## 105
 
-- preclude 😔
+- preclude [prɪˈkluːd] 😔
     - vt. 阻止
     - preclude sb from doing sth.
     - include v. 包括
     - exclude [ɪkˈskluːd] vt. 把...排斥在外；不包括；排除（...的可能性）
-- ethically
+- ethically ['eθɪklɪ]
     - adv. 伦理地，道德地
     - ethical crisis 伦理危机
 - suburban [səˈbɜːrbən]
@@ -97,16 +101,16 @@
         - in conformity with 符合/遵照/与...一致
 - notify
     - vt. 通知
-- aggregation
+- aggregation [ˌæɡrɪˈɡeʃən]
     - n. 整合
     - data aggregation 数据整合
-- mediate
+- mediate [ˈmiːdieɪt]
     - v. 调解
 - stance
     - n. 立场
     - take a stance (on/toward sth.) 对...采取立场/表明态度
     - What is the newspaper's **stance** on the war?
-- unbearable
+- unbearable [ʌnˈberəbl]
     - adj. 无法忍受的
     - bear
         - v. 忍受，承担
@@ -118,19 +122,19 @@
 - implementation
     - n. 实践，实施
     - implement v. 实施
-- punch
+- punch [pʌntʃ]
     - vt. 打击
     - n. 重拳击打
-- unwittingly
+- unwittingly [ˌʌnˈwɪtɪŋlɪ]
     - adv. 不知情地
 - gateway
     - n. 门；方法；通道；途径
-- brutal
+- brutal [ˈbruːtl]
     - adj. 残酷的
-- obstruct
+- obstruct [əbˈstrʌkt]
     - vt. 阻挠
     - obstruct efforts to 阻碍做...
-- unanimous
+- unanimous [juˈnænɪməs]
     - adj. 一致同意的
     - In a rare **unanimous** ruling，the US Supreme Court has **overturned** the corruption conviction of former
       Virginia governor，Robert McDonnell.
@@ -138,82 +142,86 @@
         - verdict [ˈvɜːrdɪkt]
             - n. 裁决
             - == ruling == decision
-        - former
+        - former [ˈfɔːrmər]
             - adj. 以前的；（两者中）前者的；前任的
             - pron. （两者中的）前者
     - anonymous [əˈnɑːnɪməs] adj. 匿名的
     - The vote was ?anonymous/?unanimous
     - You can remain ?anonymous/?unanimous if you wish.
-- accessibility
+- accessibility [əkˌsesə'bɪlətɪ]
     - n. 可获得性
     - access [ˈækses]
         - v. 访问，存取（计算机信息）; 到达，进入，使用
         - n. 入口，通道; （使用或见到的）机会/权利
-- propagate
+- propagate [ˈprɑːpəɡeɪt]
     - v. 传播
-    - spread [spred]
+    - == spread [spred]
         - v. 传播；使分布
         - n. 传播
     - propagation n. 传播
 
 ## 107
 
-- forgery
+- forgery [ˈfɔrdʒəri]
     - n. 伪造品
     - fake adj. 假的
-- controversialist
+- controversialist [ˌkɒntrə'vɜʃəlɪst]
     - n. 好争论者
-- hyperactivity
+    - controversial [ˌkɑːntrəˈvɜːrʃl] adj. 引起争论的 😔
+- hyperactivity [ˌhaɪpəræk'tɪvətɪ]
     - n. 极度活跃
-- prosperous
+- prosperous [ˈprɑːspərəs]
     - adj. 繁荣的
     - prosperity n. 繁荣，兴旺
-- plaster
+- plaster [ˈplæstər]
     - n. 熟石灰
 - orderly
     - adj. 整洁的
     - == tidy
         - adj. 整洁的，有条理的; 爱整洁的; 一大笔（钱）的
         - v. 收拾，整理
-- indication
+- indication [ˌɪndɪˈkeɪʃn]
     - n. 迹象
-- impairment 😔
+- impairment 😔 [ɪmˈpermənt]
     - n. （身体或智力方面的）缺陷，障碍
 - unauthorized
     - adj. 未经许可（或批准的）
-- irritability
+- irritability [ˌɪrɪtəˈbɪlɪti]
     - n. 易怒
     - irritate [ˈɪrɪteɪt] v. 激怒，惹怒
 
 ## 108
 
-- reclaim
+- reclaim [rɪˈkleɪm]
     - vt. 回收；要回；开垦
-- sensor
+- sensor [ˈsensər]
     - n. （探测光，热，压力等的）传感器，探测设备
     - sense n. 理智
-- proverb
+- proverb [ˈprɑːvɜːrb]
     - n. 谚语
     - quote a proverb 引用一句谚语
 - pronouncement
     - n. 声明
-- remedy
+- remedy [ˈremədi]
     - vt. 改进；改正
     - need to be remedied 需要被纠正/需要得到补救/需要解决
-- dismissal
+- dismissal [dɪsˈmɪsəl]
     - n. 解雇
     - Now a pink slip, a bad diagnosis, or a disappearing spouse can **reduce** a family from solidly middle class to
       newly poor in a few months.
         - pink slip 解雇通知单
+        - diagnosis [ˌdaɪəɡˈnoʊsɪs] n. 诊断
+        - spouse [spaʊs] n. 配偶
+        - solidly [ˈsɑːlɪdli] adv. 坚固地；结实的
         - reduce [rɪˈduːs] vt. 减少 -> 沦落到（ 使沦为（不好境地）)
-- stagnation
+- stagnation [stæɡˈneʃən]
     - n. 停滞
     - economic stagnation/recession/depression/slow down
 - deepen
     - v. （使）变深
-- abruptly
+- abruptly [əˈbrʌptli]
     - adv. 突然地
-- imprison
+- imprison [ɪmˈprɪzn]
     - vt. 监禁；禁锢
 
 ## Words
@@ -223,6 +231,7 @@
 - cozy [ˈkoʊzi]
     - adj. （感到）温暖舒适的; 愉快的，亲切的; 轻易得到的
     - n. （茶壶）保暖罩
+    - == comfortable
 
 ## 词组
 
