--- a/english/word/low-frequency/109-114.md
+++ b/english/word/low-frequency/109-114.md
@@ -77,7 +77,7 @@
     - adj. 生物医学的
 - wholeheartedly
     - adv. 全心全意地
-- diagnosis
+- diagnosis [ˌdaɪəɡˈnoʊsɪs]
     - n. 诊断
     - diagnostic adj. 诊断的
 - **deference**
@@ -190,7 +190,9 @@
 
 ## Words
 
-- cozy
+- cozy [ˈkoʊzi]
+    - adj. （感到）温暖舒适的; 愉快的，亲切的; 轻易得到的
+    - n. （茶壶）保暖罩
     - == comfortable
 - propel
     - 推进
