--- a/english/word/low-frequency/115-118.md
+++ b/english/word/low-frequency/115-118.md
@@ -27,7 +27,7 @@
 - undertake
     - vt. 承担
     - == assume == shoulder == take
-- **weaken**
+- weaken
     - v. 减弱，削弱
 - ventilation
     - n. 通风
