--- a/english/word/low-frequency/109-114.md
+++ b/english/word/low-frequency/109-114.md
@@ -21,17 +21,21 @@
 
 - stalk
     - v. 偷偷接近
-- **remodel**
+- remodel
     - vt. 改变...的形状（或结构）
 - mortal
-    - n. 平民百姓； adj. 终有一死的
+    - n. 平民百姓
+    - adj. 终有一死的
+    - I learned that every **mortal** will taste death, but only some will taste life.
 - intermittently
     - adv. 间歇地
 - inhibit
     - vt. 阻止，妨碍
-    - preclude
+    - preclude [prɪˈkluːd] 😔 vt. 阻止
     - curb
-    - dampen
+        - vt. 抑制，控制
+        - n. 限制，控制；路源；勒马绳
+    - dampen [ˈdæmpən] vt. 抑制
 - sculpture
     - n. 雕塑
 - faint
@@ -39,11 +43,11 @@
 - defendable
     - adj. 可防御的
     - defensible adj. （想法，行为等）合理的
-    - defense 捍卫，防守
+    - defense n. 辩护；防御（物）；保护；（Defense）国防机构
     - defendant n. 被告
 - renovate
     - vt. 修复
-    - innovate 创新
+    - innovate [ˈɪnəveɪt] v. 改革；创新
 
 ## 110
 
@@ -55,21 +59,26 @@
     - n. 保留
 - advocacy
     - n. 游说（组织）；提倡
-    - advocate v. 游说，倡导
+    - advocate [ˈædvəkeɪt]
+        - vt. 提倡；主张
+        - n. 倡导者；拥护者
 - scrape
     - v. v. 用程序从网上下载（数据）
 - humility
     - n. 谦逊
+    - **Humility** is not denying your strengths, **humility** is being honest about your weaknesses.
 - newlywed
-    - .新婚夫妇
-    - wedding
+    - n. 新婚夫妇
+    - wedding n. 婚礼
 - shatter
     - v. 使粉碎
 - temperament
     - n. 脾气
 - representational
     - adj. 具象派的
-    - representative n. 代表；众议院
+    - representative [ˌreprɪˈzentətɪv]
+        - n. 代表，代理人
+        - adj. 典型的，有代表性的；代议制的
 
 ## 111
 
@@ -80,11 +89,11 @@
 - diagnosis [ˌdaɪəɡˈnoʊsɪs]
     - n. 诊断
     - diagnostic adj. 诊断的
-- **deference**
+- deference
     - n. 尊敬
     - absence of deference 缺乏尊重
+    - defer [dɪˈfɜːr] vt. 推迟；延期；听从，遵从，尊敬
     - deferential adj. 恭敬的
-    - defer- 拿
 - racial
     - adj. 种族的
     - racial discrimination 种族歧视
@@ -95,12 +104,13 @@
 - constitutionality
     - n. 符合宪法
     - constitution n. 宪法
-    - unconstitutionality 违反宪法
+    - unconstitutionality n. 违反宪法
 
 ## 112
 
 - assimilate
-    - v. 使同化；vt. 透彻理解
+    - vt. 透彻理解
+    - v. （使）同化；融入
     - assimilative adj. 同化的
 - rifle
     - vt. 迅速翻找
@@ -110,15 +120,17 @@
 - indefinite
     - adj. 不确定的；无限期的
     - == uncertain
-    - define v. 下定义，确定的，有限的
+    - define vt. 定义
+    - definite [ˈdefɪnət] adj. 不会改变的; 明确的; (证据或信息)确凿的
 - quotation
     - n. 引文
-- publicise/-ize
+- publicise
     - vt. 宣传
 - stall
     - n. [pl.] （剧场的）正厅前座区
-- adverse
+- adverse 😔
     - adj. 不利的
+    - Don't let **adverse** facts stand in the way of a good decision.
     - It is argued that the influence of transient investment on public companies can be **adverse**.
 - transformative
     - adj. 有改革能力的
@@ -132,6 +144,9 @@
     - n. 障碍物
 - precision
     - n. 精准性
+    - precise
+        - adj. 精确的
+        - == exact adj. 精确的，准确的
 - serially
     - adv. 连载地
 - forefront
@@ -139,46 +154,53 @@
     - at/in/to the forefront of 在...的最前沿
 - combative
     - adj. 好斗的
-    - combat 对抗
+    - combat vt. 与...战斗；防止
 - crude
     - adj. 简陋的
 - interface
-    - n. 界面（尤指屏幕布局和菜单）
+    - n. 界面（尤指屏幕布局和菜单）；接口
     - the user interface 用户界面
 - resolute
     - adj. 坚定的
-    - resolute determination 坚定的决心
-    - Voters perceive him as a decisive and resolute international leader.
+    - The truest wisdom is a **resolute** determination.
+    - Voters perceive him as a decisive and **resolute** international leader.
+        - decisive adj. 决定性的; 明确的; 决断的
 - monotonous
     - adj. 单调的
     - the same monotonous beats 同样单调的节拍
-    - When I was young,I was often <ins>in monotonous and tiresome situations. (无聊疲乏的状态)</ins>
-    - monologue n. 独白
-        - mono- == single 单个，一个
+    - When I was young, I was often <ins>in **monotonous** and tiresome situations(无聊疲乏的状态)</ins>.
+    - mono- 单个，一个
+        - == single
+        - monologue n. 独白
     - dialogue n. 对话
 
 ## 114
 
 - enclose
     - vt. 围住
-    - enclosure n. 圈用地
+    - enclosure n. 圈用地；（信中）附件
     - en- 使动
 - surge
     - n. 汹涌澎湃
-- **transcend**
+    - vi. 汹涌；激增
+- transcend
     - vt. 超出，超越
+    - transcendence [trænˈsɛndəns] n. 超越
 - stroll
     - vi. 散步
     - take stroll down
+    - take a stroll 悠闲地散步
+    - take a stroll down + 地点 沿着某处悠闲地走
+    - take a stroll down memory lane 回忆往事
 - treaty
     - n. 条约
-    - Treaty
 - ascribe
     - vt. 认为...具有；把...归因于
     - ascribe meanings to texts 赋予文本含义
-    - ascribe A to B
-    - We **<ins>ascribe(attach)</ins> great importance to**（重视） these policies.
-    - Scholars ascribe the trend to many causes. 归因于
+    - ascribe A to B 把 A 归因于 B/认为 A 是由 B 造成的
+    - We **ascribe** great importance to these policies.
+        - ascribe/attach great importance to 重视
+    - Scholars **ascribe** the trend to many causes.
 - breach
     - vt. 攻破
     - n. 破坏
@@ -196,6 +218,8 @@
     - == comfortable
 - propel
     - 推进
+- gorgeous [ˈɡɔːrdʒəs]
+    - adj. 华丽的，艳丽的; 极好的，称心的; 美丽动人的，光彩夺目的; 令人愉快的，令人享受的
 
 ## 词组
 
