--- a/english/word/low-frequency/109-114.md
+++ b/english/word/low-frequency/109-114.md
@@ -19,15 +19,15 @@
 
 ## 109
 
-- stalk
+- stalk [stɔːk]
     - v. 偷偷接近
 - remodel
     - vt. 改变...的形状（或结构）
-- mortal
+- mortal [ˈmɔːrtl]
     - n. 平民百姓
     - adj. 终有一死的
     - I learned that every **mortal** will taste death, but only some will taste life.
-- intermittently
+- intermittently [ˌɪntə'mɪtəntlɪ]
     - adv. 间歇地
 - inhibit
     - vt. 阻止，妨碍
@@ -36,45 +36,48 @@
         - vt. 抑制，控制
         - n. 限制，控制；路源；勒马绳
     - dampen [ˈdæmpən] vt. 抑制
-- sculpture
+- sculpture [ˈskʌlptʃər]
     - n. 雕塑
-- faint
+- faint [feɪnt]
     - adj. 轻微的
-- defendable
+- defendable [dɪ'fendəbl]
     - adj. 可防御的
-    - defensible adj. （想法，行为等）合理的
     - defense n. 辩护；防御（物）；保护；（Defense）国防机构
+    - defensible adj. （想法，行为等）合理的
     - defendant n. 被告
-- renovate
+- renovate [ˈrenəveɪt]
     - vt. 修复
     - innovate [ˈɪnəveɪt] v. 改革；创新
 
 ## 110
 
-- spiritual
+- spiritual [ˈspɪrɪtʃuəl]
     - adj. 精神的
-- interim
+- interim [ˈɪntərɪm]
     - adj. 临时的
-- retention
+- retention [rɪˈtenʃn]
     - n. 保留
-- advocacy
+- advocacy [ˈædvəkəsi]
     - n. 游说（组织）；提倡
     - advocate [ˈædvəkeɪt]
         - vt. 提倡；主张
         - n. 倡导者；拥护者
-- scrape
-    - v. v. 用程序从网上下载（数据）
-- humility
+- scrape [skreɪp]
+    - v. 用程序从网上下载（数据）
+- humility [hjuˈmɪlɪti]
     - n. 谦逊
     - **Humility** is not denying your strengths, **humility** is being honest about your weaknesses.
-- newlywed
+      谦逊不是否认自己的长处，谦逊是对自己的弱点保持诚实
+        - deny [dɪˈnaɪ] vt. 否认；拒绝
+        - weakness n. 弱点
+- newlywed [ˈnuliˌwɛd]
     - n. 新婚夫妇
     - wedding n. 婚礼
-- shatter
+- shatter [ˈʃætər]
     - v. 使粉碎
-- temperament
+- temperament [ˈtemprəmənt]
     - n. 脾气
-- representational
+- representational [ˌreprɪzenˈteɪʃənl]
     - adj. 具象派的
     - representative [ˌreprɪˈzentətɪv]
         - n. 代表，代理人
@@ -82,18 +85,19 @@
 
 ## 111
 
-- biomedical
+- biomedical [ˌbaɪoʊˈmedɪkl]
     - adj. 生物医学的
-- wholeheartedly
+- wholeheartedly [ˌhoʊl'hɑtɪdlɪ]
     - adv. 全心全意地
 - diagnosis [ˌdaɪəɡˈnoʊsɪs]
     - n. 诊断
-    - diagnostic adj. 诊断的
-- deference
+    - diagnostic [ˌdaɪəgˈnɑstɪk] adj. 诊断的
+- deference [ˈdefərəns]
     - n. 尊敬
     - absence of deference 缺乏尊重
+        - absence [ˈæbsəns] n. 缺乏
     - defer [dɪˈfɜːr] vt. 推迟；延期；听从，遵从，尊敬
-    - deferential adj. 恭敬的
+    - deferential [ˌdefəˈrenʃl] adj. 恭敬的
 - racial
     - adj. 种族的
     - racial discrimination 种族歧视
@@ -108,31 +112,34 @@
 
 ## 112
 
-- assimilate
+- assimilate [əˈsɪməleɪt]
     - vt. 透彻理解
     - v. （使）同化；融入
-    - assimilative adj. 同化的
-- rifle
+    - assimilative [ə'sɪmɪlətɪv] adj. 同化的
+- rifle [ˈraɪfl]
     - vt. 迅速翻找
-    - rifle through
-- saturate
+    - rifle through 匆忙、粗暴地翻找（为了找某样东西）
+- saturate [ˈsætʃəreɪt]
     - vt. 使充满
-- indefinite
+- indefinite [ɪnˈdefɪnət]
     - adj. 不确定的；无限期的
-    - == uncertain
+    - == uncertain adj. 犹豫; 多变的; 不确定的; 未知的; 迟疑的
+    - == tentative adj. 不确定的；犹豫的
     - define vt. 定义
     - definite [ˈdefɪnət] adj. 不会改变的; 明确的; (证据或信息)确凿的
 - quotation
     - n. 引文
-- publicise
+- publicise [ˈpʌblɪˌsaɪz]
     - vt. 宣传
-- stall
+- stall [stɔːl]
     - n. [pl.] （剧场的）正厅前座区
-- adverse 😔
+- adverse 😔 [ədˈvɜːrs]
     - adj. 不利的
     - Don't let **adverse** facts stand in the way of a good decision.
     - It is argued that the influence of transient investment on public companies can be **adverse**.
-- transformative
+      有人认为，短期投资对上市公司的影响可能是不利的
+        - transient [ˈtrænʃnt] adj. 短暂的
+- transformative [ˌtræns'fɔmətɪv]
     - adj. 有改革能力的
 
 ## 113
@@ -142,73 +149,76 @@
     - make up for that shortfall 弥补不足
 - roadblock
     - n. 障碍物
-- precision
+- precision [prɪˈsɪʒn]
     - n. 精准性
-    - precise
+    - precise [prɪˈsaɪs]
         - adj. 精确的
-        - == exact adj. 精确的，准确的
-- serially
+        - == exact [ɪɡˈzækt] adj. 精确的，准确的
+- serially ['sɪərɪrlɪ]
     - adv. 连载地
-- forefront
+- forefront [ˈfɔrfrʌnt]
     - n. (运动、活动的)前沿
     - at/in/to the forefront of 在...的最前沿
-- combative
+- combative [kəmˈbætɪv]
     - adj. 好斗的
-    - combat vt. 与...战斗；防止
-- crude
+    - combat [ˈkɑːmbæt] vt. 与...战斗；防止
+- crude [kruːd]
     - adj. 简陋的
 - interface
     - n. 界面（尤指屏幕布局和菜单）；接口
     - the user interface 用户界面
 - resolute
     - adj. 坚定的
-    - The truest wisdom is a **resolute** determination.
+    - The truest wisdom is a **resolute** determination. 最真实的智慧，是一种坚定不移的决心
+        - truest [truɪst] adj. 真的，确实的
+        - wisdom [ˈwɪzdəm] n. 智慧; 明智; (社会或文化长期积累的)知识; 普遍看法
     - Voters perceive him as a decisive and **resolute** international leader.
+        - perceive [pərˈsiːv] v. 感知；注意到；将...理解为
         - decisive adj. 决定性的; 明确的; 决断的
-- monotonous
+- monotonous [məˈnɑːtənəs]
     - adj. 单调的
     - the same monotonous beats 同样单调的节拍
     - When I was young, I was often <ins>in **monotonous** and tiresome situations(无聊疲乏的状态)</ins>.
     - mono- 单个，一个
         - == single
-        - monologue n. 独白
+        - monologue [ˈmɑːnəlɔːɡ] n. 独白
     - dialogue n. 对话
 
 ## 114
 
 - enclose
     - vt. 围住
-    - enclosure n. 圈用地；（信中）附件
+    - enclosure [ɪnˈkloʊʒər] n. 圈用地；（信中）附件
     - en- 使动
-- surge
-    - n. 汹涌澎湃
+- surge [sɜːrdʒ]
     - vi. 汹涌；激增
-- transcend
+    - n. 汹涌澎湃
+- transcend [trænˈsend]
     - vt. 超出，超越
     - transcendence [trænˈsɛndəns] n. 超越
-- stroll
+- stroll [stroʊl]
     - vi. 散步
-    - take stroll down
-    - take a stroll 悠闲地散步
     - take a stroll down + 地点 沿着某处悠闲地走
+    - take a stroll 悠闲地散步
     - take a stroll down memory lane 回忆往事
-- treaty
+- treaty [ˈtriːti]
     - n. 条约
-- ascribe
+- ascribe [əˈskraɪb]
     - vt. 认为...具有；把...归因于
-    - ascribe meanings to texts 赋予文本含义
     - ascribe A to B 把 A 归因于 B/认为 A 是由 B 造成的
+    - ascribe meanings to texts 赋予文本含义
     - We **ascribe** great importance to these policies.
         - ascribe/attach great importance to 重视
     - Scholars **ascribe** the trend to many causes.
-- breach
+- breach [briːtʃ]
     - vt. 攻破
     - n. 破坏
-- certify
+- certify [ˈsɜːrtɪfaɪ]
     - vt. 证明
-- chunk
+- chunk [tʃʌŋk]
     - n. （语言）话语组成部分
     - chunks of memorized poetry 大量背诵下来的诗歌
+        - poetry [ˈpoʊətri] n. 诗歌，诗集
 
 ## Words
 
@@ -216,8 +226,8 @@
     - adj. （感到）温暖舒适的; 愉快的，亲切的; 轻易得到的
     - n. （茶壶）保暖罩
     - == comfortable
-- propel
-    - 推进
+- propel [prəˈpel]
+    - vt. 推进; 推动; 驱动; 驱使
 - gorgeous [ˈɡɔːrdʒəs]
     - adj. 华丽的，艳丽的; 极好的，称心的; 美丽动人的，光彩夺目的; 令人愉快的，令人享受的
 
